--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,27 @@ body {
     margin: 0 auto;
 }
 
+section {
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    margin: 0px auto 30px;
+    padding: 0px 0px 20px 20px;
+}
+
+header {
+
+}
+
+/*Colors*/
+
+.colors {
+    border-radius: 5px;
+    display: inline-block;
+    width: 30%;
+    height: 100px; 
+    margin: 0 20px 20px 0;  
+}
+
 #ocean {
     background-color: #246BBD;
 }
@@ -19,9 +40,5 @@ body {
     background-color: #BD24B8;
 }
 
-.colors {
-    display: inline-block;
-    width: 200px;
-    height: 100px;
-    margin: 0px 20px 20px 0px;
-}
+
+
