--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,13 @@ header {
 /*Colors*/
 
 .colors {
+    color: white;
     border-radius: 5px;
     display: inline-block;
-    width: 30%;
+    width: 200px;
     height: 100px; 
     margin: 0 20px 20px 0;  
+    text-align: center;
 }
 
 #ocean {
@@ -39,6 +41,7 @@ header {
 #radiant-pink {
     background-color: #BD24B8;
 }
+
 
 
 
