--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 body {
     box-sizing: border-box;
     min-width: 250px;
-    max-width: 70%;
+    max-width: 80%;
     margin: 0 auto;
 }
 
@@ -172,6 +172,25 @@ section {
     font-style: italic;
 }
 
+/*Text styles*/
+
+#text-styles h1 {
+    font-family: "Merriweather";
+    font-weight: 700;
+    font-size: 40px;
+}
+
+#text-styles h2 {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 30px;
+}
+
+#text-styles p {
+    font-family: "Roboto Mono";
+    font-weight: 400;
+    font-size: 18px;
+}
 
 
 
